--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="test_username">UserName</string>
     <string name="test_password">Password</string>
     <string name="test_login">Login</string>
+    <string name="test_welcome">Welcome</string>
+    <string name="test_user">Juan</string>
 </resources>
