--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="test_username">UserName</string>
+    <string name="test_userExample">example@domain.com</string>
     <string name="test_password">Password</string>
     <string name="test_login">Login</string>
     <string name="test_welcome">Welcome</string>
     <string name="test_user">Juan</string>
+    <string name="test_errorlogin">Invalid username or password</string>
 </resources>
